<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@android:color/darker_gray">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:layout_marginTop="8dp">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/recycler">
                <Button
                        android:text="@string/eventdriven"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/eventDrivenSortBut"
                        android:layout_weight="1" android:textSize="8sp"/>
                <Button
                        android:text="@string/declarative"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/declarativeSortBut"
                        android:layout_weight="1"
                        android:textSize="8sp"/>
                <Button
                        android:text="@string/functional"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/functionalSortBut"
                        android:layout_weight="1"
                        android:textSize="8sp"/>
                <Button
                        android:text="@string/imperative"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/imperativeSortBut"
                        android:layout_weight="1"
                        android:textSize="8sp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <Button
                        android:text="@string/objectoriented"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/objOrientSortBut"
                        android:layout_weight="1"
                        android:textSize="8sp"/>
                <Button
                        android:text="@string/procedural"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/proceduralSortBut"
                        android:layout_weight="1"
                        android:textSize="8sp"/>
                <Button
                        android:text="@string/structured"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/structuredSortBut"
                        android:layout_weight="1"
                        android:textSize="8sp"/>
                <Button
                        android:text="@string/all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/allSortBut" android:layout_weight="1"
                        android:textSize="8sp"/>
            </LinearLayout>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycler"
        >
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>